@@ -55,25 +55,24 @@ Ready.
 [ 18@0,	"trevsorted",	"1"	]
 [ 19@0,	"tkey",	"1"	]
 [ 20@0,	"tvarsized",	"0"	]
-[ 21@0,	"talign",	"20000000"	]
-[ 22@0,	"tnosorted",	"0"	]
-[ 23@0,	"tnorevsorted",	"0"	]
-[ 24@0,	"tnodense",	"0"	]
-[ 25@0,	"tnokey[0]",	"0"	]
-[ 26@0,	"tnokey[1]",	"0"	]
-[ 27@0,	"tnonil",	"1"	]
-[ 28@0,	"tnil",	"0"	]
-[ 29@0,	"batInserted",	"0"	]
-[ 30@0,	"ttop",	"0"	]
-[ 31@0,	"batCopiedtodisk",	"0"	]
-[ 32@0,	"batDirtydesc",	"dirty"	]
-[ 33@0,	"T->heap.dirty",	"clean"	]
-[ 34@0,	"tail.free",	"0"	]
-[ 35@0,	"tail.size",	"1024"	]
-[ 36@0,	"tail.storage",	"malloced"	]
-[ 37@0,	"tail.newstorage",	"malloced"	]
-[ 38@0,	"tail.filename",	"22.tail"	]
-[ 39@0,	"T->vheap->dirty",	"clean"	]
+[ 21@0,	"tnosorted",	"0"	]
+[ 22@0,	"tnorevsorted",	"0"	]
+[ 23@0,	"tnodense",	"0"	]
+[ 24@0,	"tnokey[0]",	"0"	]
+[ 25@0,	"tnokey[1]",	"0"	]
+[ 26@0,	"tnonil",	"1"	]
+[ 27@0,	"tnil",	"0"	]
+[ 28@0,	"batInserted",	"0"	]
+[ 29@0,	"ttop",	"0"	]
+[ 30@0,	"batCopiedtodisk",	"0"	]
+[ 31@0,	"batDirtydesc",	"dirty"	]
+[ 32@0,	"T->heap.dirty",	"clean"	]
+[ 33@0,	"tail.free",	"0"	]
+[ 34@0,	"tail.size",	"1024"	]
+[ 35@0,	"tail.storage",	"malloced"	]
+[ 36@0,	"tail.newstorage",	"malloced"	]
+[ 37@0,	"tail.filename",	"22.tail"	]
+[ 38@0,	"T->vheap->dirty",	"clean"	]
 #~EndVariableOutput~#
 #--------------------------#
 # h	t  # name
